<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/my_reports_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >    
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="48dip">
	    <TextView
        	android:gravity="center"
        	android:layout_width="fill_parent"
        	android:layout_height="48dip"
        	android:textSize="20sp"
        	android:text="@string/my_reports"
        />
	    <Button
        	android:background="#ffffff"
        	android:onClick="back"
        	android:layout_height="48dip"
        	android:layout_width="48dip"
        	android:text="@string/back"
        />
	    <Button
	        android:layout_alignParentRight="true"
        	android:layout_width="48dip"
        	android:layout_height="48dip"
        	android:background="#ffffff"
        	android:onClick="createReports"
        	android:text="@string/create" />
	</RelativeLayout>
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="1dip"
	    android:background="#333333"/>
	<LinearLayout
	    android:paddingTop="10dip"
	    android:paddingLeft="20dip"
	    android:paddingRight="20dip"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="30dip">
	        <TextView
	            android:layout_width="0dip"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.5"
	            android:text="@string/project"/>
	        <Spinner
	            style="@style/spinner_style"
	            android:id="@+id/spinner_my_reports_project"
	            android:layout_weight="0.5"
	            android:layout_width="0dip"
	            android:layout_height="fill_parent"/>
	    </LinearLayout>    
	    <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="30dip">
	        <TextView
	            android:text="@string/status"
	            android:layout_width="0dip"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.5"/>
	        <Spinner
	            style="@style/spinner_style"
	            android:id="@+id/spinner_my_reports_status"
	            android:layout_weight="0.5"
	            android:layout_width="0dip"
	            android:layout_height="fill_parent"/>
	    </LinearLayout> 
	    <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="30dip">
	        <TextView
	            android:text="@string/start_time"
	            android:layout_width="0dip"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.5"/>
	        <TextView
	            android:text="2014-02-10"
	            android:layout_width="0dip"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.5"/>
	    </LinearLayout>   
	    <LinearLayout
	        android:orientation="horizontal"
	        android:layout_width="fill_parent"
	        android:layout_height="30dip">
	        <TextView
	            android:text="@string/end_time"
	            android:layout_width="0dip"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.5"/>
	        <TextView
	            android:text="2014-02-11"
	            android:layout_width="0dip"
	            android:layout_height="fill_parent"
	            android:layout_weight="0.5"/>
	    </LinearLayout> 
	    
	    <Button
	        android:textSize="20sp"
	        android:textColor="#000000"
	        android:onClick="search"
	        android:background="#ffffff"
	        android:layout_width="fill_parent"
	        android:layout_height="30dip"
	        android:text="@string/search"/>
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="1dip"
	        android:background="#333333"/>
	</LinearLayout>    
    <ListView
        android:id="@+id/my_reports_listView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
