<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dip" >

        <Button
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:background="#ffffff"
            android:onClick="back"
            android:text="@string/back" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:gravity="center"
            android:text="@string/report_details"
            android:textSize="20sp" />
        <Button
            android:layout_alignParentRight="true"
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:background="#ffffff"
            android:onClick="update"
            android:text="@string/update" />
    </RelativeLayout>
    <TextView
	    android:layout_width="fill_parent"
	    android:layout_height="1dip"
	    android:background="#333333"/>
    <LinearLayout
	    android:paddingTop="10dip"
	    android:paddingLeft="20dip"
	    android:paddingRight="20dip"
	    android:orientation="vertical" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
 
	    <LinearLayout
	        android:orientation="horizontal" 
	        android:layout_width="fill_parent"
	        android:layout_height="300dip">
	        <TextView
	            android:gravity="center|right"
	            android:layout_width="100dip"
	            android:layout_height="match_parent"
	            android:text="@string/content"/>
	        <EditText
	            android:gravity="center|left"
	            android:text="宣城出差演示系统"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:ems="10"
	    		android:inputType="textMultiLine" />
	            
	    </LinearLayout>   
	    <LinearLayout
	        android:orientation="horizontal" 
	        android:layout_width="fill_parent"
	        android:layout_height="40dip">
	        <TextView
	            android:gravity="center|right"
	           	android:layout_width="100dip"
	            android:layout_height="match_parent"
	            android:text="@string/project"/>
	        <TextView
	            android:gravity="center|left"
	            android:clickable="true"
	            android:onClick="selectProjects"
	            style="@style/spinner_style"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"/>
	            
	    </LinearLayout> 
	    <LinearLayout
	        android:orientation="horizontal" 
	        android:layout_width="fill_parent"
	        android:layout_height="40dip">
	        <TextView
	            android:gravity="center|right"
	            android:layout_width="100dip"
	            android:layout_height="match_parent"
	            android:text="@string/date"/>
	        <EditText
	            android:gravity="center|left"
	            android:text="2014-2-10"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:inputType="text"/>
	            
	    </LinearLayout>

	    <LinearLayout
	        android:orientation="horizontal" 
	        android:layout_width="fill_parent"
	        android:layout_height="40dip">
	        <TextView
	            android:gravity="center|right"
	            android:layout_width="100dip"
	            android:layout_height="match_parent"
	            android:text="@string/status"/>
	        <TextView
	            android:gravity="center|left"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:text="@string/unstatus"/>
	            
	    </LinearLayout>
	    <LinearLayout
	        android:orientation="horizontal" 
	        android:layout_width="fill_parent"
	        android:layout_height="40dip">
	        <TextView
	            android:gravity="center|right"
	            android:layout_width="100dip"
	            android:layout_height="match_parent"
	            android:text="@string/note"/>
	        <TextView
	            android:gravity="center|left"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:text="批注信息"/>      
	    </LinearLayout>
	    
	    <LinearLayout
	        android:orientation="horizontal" 
	        android:layout_width="fill_parent"
	        android:layout_height="40dip">
	        <TextView
	            android:gravity="center|right"
	            android:layout_width="100dip"
	            android:layout_height="match_parent"
	            android:text="@string/position"/>
	        <EditText
	            android:gravity="center|left"
	            android:text="宣城"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:inputType="text"/>
	            
	    </LinearLayout>
	    <LinearLayout
	        android:orientation="horizontal" 
	        android:layout_width="fill_parent"
	        android:layout_height="40dip">
	        <TextView
	            android:gravity="center|right"
	            android:layout_width="100dip"
	            android:layout_height="match_parent"
	            android:text="@string/working_time"/>
	        <EditText
	            android:gravity="center|left"
	            android:text="6h"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:inputType="text"/>
	            
	    </LinearLayout>
	</LinearLayout>

</LinearLayout>
