<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="48dip">
	    <TextView
        	android:gravity="center"
        	android:layout_width="fill_parent"
        	android:layout_height="48dip"
        	android:textSize="20sp"
        	android:text="@string/select_project"
        />
	    <Button
        	android:background="#ffffff"
        	android:onClick="back"
        	android:layout_height="48dip"
        	android:layout_width="48dip"
        	android:text="@string/back"
        />
	</RelativeLayout>
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="1dip"
	    android:background="#333333"/>
	<RadioGroup
	    android:id="@+id/radiogroup_select_projects"
	    android:layout_width="fill_parent"
	    android:layout_height="48dip"
	    android:orientation="horizontal">
	    <RadioButton
	        android:gravity="center"
	        android:background="@drawable/radio_button_selector"
	        android:button="@null"
	        android:id="@+id/radiobutton_recent_projects"
	        android:text="@string/recent_projects"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.3"/>
	    <RadioButton
	        android:gravity="center"
	        android:background="@drawable/radio_button_selector"
	        android:button="@null"
	        android:id="@+id/radiobutton_department_projects"
	        android:text="@string/department_projects"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.3"/>
	    <RadioButton
	        android:gravity="center"
	        android:background="@drawable/radio_button_selector"
	        android:button="@null"
	        android:id="@+id/radiobutton_search_projects"
	        android:text="@string/search_projects"
	        android:layout_width="0dip"
	        android:layout_height="match_parent"
	        android:layout_weight="0.3"/>
	</RadioGroup>    
	<fragment
	    class="com.jiyuan.pmis.reports.SelectProjectsRecentFragment"
        android:id="@+id/fragment_place"
   		android:layout_width="match_parent"
   		android:layout_height="match_parent" />

</LinearLayout>
