<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="48dip"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="20sp" />

        <Button
            android:layout_width="48dip"
            android:layout_height="48dip"
            android:background="#ffffff"
            android:onClick="back"
            android:text="@string/back" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#333333" />

    <TextView
        android:layout_width="fill_parent"
        android:padding="6dip"
        android:layout_height="wrap_content"
        android:text="@string/about_us_content"/>

</LinearLayout>